--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -289,4 +289,12 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="unit_milliseconds">Millisekunden</string>
     <string name="unit_ms">ms</string>
     <string name="unit_seconds">Sekunden</string>
+
+    <!-- Pulse Gravity and mirror options -->
+    <string name="pulse_custom_gravity_title">Gravitation</string>
+    <string name="pulse_custom_gravity_bottom">Unten</string>
+    <string name="pulse_custom_gravity_top">Oben</string>
+    <string name="pulse_custom_gravity_center">Mittig</string>
+    <string name="visualizer_center_mirrored_title">Mittig gespiegelt</string>
+    <string name="visualizer_center_mirrored_summary">Den mittig gespiegelten Modus aktivieren</string>
 </resources>
