Settings: Introduce keyguard battery bar settings [2/3]. * Show keyguard battery bar in aod on charging (omnirom) * Always show keyguard battery bar (pixeldust extension)
[spezi77] Moved to a frag on its own below Lockscreen settings
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -95,4 +95,12 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- Volume button music control -->
     <string name="volume_button_music_control_title">Playback control</string>
     <string name="volume_button_music_control_summary">When the screen is off, long-pressing volume keys will skip music tracks</string>
+
+    <!-- Ambient battery bar settings -->
+    <string name="ambient_battery_settings_title">Battery bar</string>
+    <string name="ambient_battery_settings_summary">Display a battery bar on the ambient display</string>
+    <string name="keyguard_show_battery_title">Battery bar when charging</string>
+    <string name="keyguard_show_battery_summary">Show a battery bar on the ambient display when charging</string>
+    <string name="keyguard_show_battery_always_title">Always show battery bar</string>
+    <string name="keyguard_show_battery_always_summary">Always show a battery bar on the ambient display</string>
 </resources>
