--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -95,4 +95,12 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Volume button music control -->
     <string name="volume_button_music_control_title">Musikwiedergabe steuern</string>
     <string name="volume_button_music_control_summary">Während das Display aus ist, lassen sich Musiktitel durch langes Drücken der Lautstärketasten überspringen.</string>
+
+    <!-- Ambient battery bar settings -->
+    <string name="ambient_battery_settings_title">Akkustandbalken</string>
+    <string name="ambient_battery_settings_summary">Akkustandbalken auf dem Ambient Display anzeigen</string>
+    <string name="keyguard_show_battery_title">Akkustandbalken beim Laden</string>
+    <string name="keyguard_show_battery_summary">Während des Ladevorgangs einen Akkustandbalken auf dem Ambient Display anzeigen</string>
+    <string name="keyguard_show_battery_always_title">Akkustandbalken immer anzeigen</string>
+    <string name="keyguard_show_battery_always_summary">Akkustandbalken immer auf dem Ambient Display anzeigen</string>
 </resources>
