--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -79,6 +79,12 @@
             android:title="@string/lockscreen_double_line_clock_setting_toggle"
             android:summary="@string/lockscreen_double_line_clock_summary"
             settings:controller="com.android.settings.display.LockscreenClockPreferenceController" />
+
+        <Preference
+            android:key="ambient_battery"
+            android:title="@string/ambient_battery_settings_title"
+            android:summary="@string/ambient_battery_settings_summary"
+            android:fragment="com.pixeldust.settings.ambient.AmbientBatterySettings" />
     </PreferenceCategory>
 
     <PreferenceCategory
