--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -215,4 +215,24 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="global_vpn_summary">Den gesamten Datenverkehr auf dem Gerät über dieses VPN erzwingen, einschließlich Arbeitsprofil und anderer Benutzer.</string>
     <string name="global_vpn_summary_on">Den gesamten Datenverkehr auf dem Gerät über dieses VPN erzwingen, einschließlich Arbeitsprofil und anderer Benutzer. Hinweis: Wenn diese Option aktiviert ist, kannst Du kein separates VPN in einem Arbeitsprofil oder anderen Benutzern verwenden.</string>
     <string name="global_vpn_summary_any_vpn_active">Du musst zuerst alle aktiven VPN-Verbindungen deaktivieren, um diese Option zu aktivieren.</string>
+
+    <!-- Status bar - Battery -->
+    <string name="battery_category_title">Akkuanzeige</string>
+    <string name="status_bar_battery_style_title">Stil des Akkusymbols</string>
+    <string name="status_bar_battery_style_icon_portrait">Symbol (Hochformat)</string>
+    <string name="status_bar_battery_style_icon_rlandscape">Querformat-Symbol (Rechts)</string>
+    <string name="status_bar_battery_style_icon_landscape">Querformat-Symbol (Links)</string>
+    <string name="status_bar_battery_style_circle">Kreis</string>
+    <string name="status_bar_battery_style_dotted_circle">Kreis (gepunktet)</string>
+    <string name="status_bar_battery_style_big_circle">Kreis (groß)</string>
+    <string name="status_bar_battery_style_big_dotted_circle">Kreis (gepunktet)</string>
+    <string name="status_bar_battery_style_filled_circle">Kreis (gefüllt)</string>
+    <string name="status_bar_battery_style_text">Text</string>
+    <string name="status_bar_battery_style_hidden">Ausgeblendet</string>
+    <string name="status_bar_battery_percent_title">Akkuanzeige in Prozent</string>
+    <string name="status_bar_battery_percent_hidden">Ausgeblendet</string>
+    <string name="status_bar_battery_percent_text_inside">Innerhalb des Symbols</string>
+    <string name="status_bar_battery_percent_text_next">Neben dem Symbol</string>
+    <string name="status_bar_battery_text_charging_title">Akku-Prozentzahl beim Laden</string>
+    <string name="status_bar_battery_text_charging_summary">Akku-Prozentanzeige beim Laden immer anzeigen</string>
 </resources>
