--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2022 The PixelDust Project
+     Copyright (C) 2022-2023 The PixelDust Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <PreferenceScreen
@@ -25,5 +25,29 @@
             android:summary="@string/network_traffic_summary"
             android:fragment="com.pixeldust.settings.statusbar.NetworkTrafficSettings"/>
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/battery_category_title">
+
+        <com.pixeldust.support.preference.SystemSettingListPreference
+            android:key="status_bar_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:entries="@array/status_bar_battery_style_entries"
+            android:entryValues="@array/status_bar_battery_style_values"
+            android:defaultValue="0" />
+
+        <com.pixeldust.support.preference.SystemSettingListPreference
+            android:key="status_bar_show_battery_percent"
+            android:title="@string/status_bar_battery_percent_title"
+            android:entries="@array/status_bar_battery_percent_entries"
+            android:entryValues="@array/status_bar_battery_percent_values"
+            android:defaultValue="0" />
+
+        <com.pixeldust.support.preference.SystemSettingSwitchPreference
+            android:key="status_bar_battery_text_charging"
+            android:title="@string/status_bar_battery_text_charging_title"
+            android:summary="@string/status_bar_battery_text_charging_summary"
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
