Settings: Create face confirmation activity
Also add missing strings

Change-Id: Id245c958a3f32e36620240fab6b9b4961bee35d5
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -103,6 +103,7 @@
     <color name="search_bar_background">?androidprv:attr/materialColorSurfaceBright</color>
 
     <color name="face_enroll_icon_color">#42a5f5</color> <!-- Blue 400 -->
+    <color name="face_enroll_check_color">#42a5f5</color>
 
     <color name="back_gesture_indicator">#4182ef</color>
 
