Settings: Add option to launch statusbar tuner [2/2]
[ghostrider-reborn]
  - Use Preference instead of PreferenceScreen for android 12

Change-Id: I301ac9416994449b941b5a9e0e9aa79a76f58281
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -51,4 +51,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="color_mode_balance_green">Grüne Stärke</string>
     <string name="color_mode_balance_blue">Blaue Stärke</string>
     <string name="keywords_color_balance">Farbe, Farbbalance, Farbkorrektur, Rot, Grün, Blau, LiveDisplay</string>
+
+    <!-- Status bar Icon Manager -->
+    <string name="icon_manager_title">Statusleistensymbole</string>
+    <string name="icon_manager_summary">Statusleistensymbole konfigurieren</string>
 </resources>
