--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -29,4 +29,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="gesture_power_button_torch_double_tap_title">Quickly pressing the power menu button twice</string>
     <string name="gesture_double_tap_power_summary_disabled">Disabled by flashlight gesture</string>
     <string name="double_tap_power_for_torch_summary_disabled">Disabled by open camera gesture</string>
+
+    <!-- General tweaks -->
+    <string name="general_settings_title">General tweaks</string>
+    <string name="general_settings_summary">Other common and useful customizations</string>
 </resources>
