--- a/res/xml/system_dashboard_fragment.xml
+++ b/res/xml/system_dashboard_fragment.xml
@@ -63,6 +63,14 @@
         settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/>
 
     <Preference
+        android:key="general_settings"
+        android:title="@string/general_settings_title"
+        android:summary="@string/general_settings_summary"
+        android:icon="@drawable/ic_settings_general"
+        android:order="-223"
+        android:fragment="com.pixeldust.settings.tweaks.GeneralSettings"/>
+
+    <Preference
         android:key="date_time_settings"
         android:title="@string/date_and_time"
         android:icon="@drawable/ic_settings_date_time"
