--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -33,4 +33,9 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- General tweaks -->
     <string name="general_settings_title">Allgemeine Einstellungen</string>
     <string name="general_settings_summary">Weitere allgemeine und nützliche Anpassungen</string>
+
+    <!-- Unlimited photos storage -->
+    <string name="use_photos_spoof_title">Unbegrenzter Google Fotos Speicherplatz</string>
+    <string name="use_photos_spoof_summary">Dein Gerät wird als Pixel XL ausgewiesen, um kostenlos Videos und Fotos in verlustfreier Qualität bei Google Fotos zu speichern. Das bedeutet jedoch, dass Funktionen wie der Magic Eraser nicht mehr verfügbar sind.</string>
+    <string name="photos_spoof_toast">Fotos-App neustarten, damit es wirksam wird</string>
 </resources>
