Theming: Add support for UI Styles Not a great previewer but for now it'll do the work
Change-Id: I432578a4b3c652d7ad3e00a93e11bfb3e199b4a5
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -67,9 +67,9 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- Running services - Background processes tab -->
     <string name="background_processes_settings_title">Background processes</string>
 
-    <!-- Black theme -->
-    <string name="system_black_theme_title">Use black theme</string>
-    <string name="system_black_theme_summary">Force black background colors</string>
+    <!-- UI Styles -->
+    <string name="theme_customization_ui_style_title">UI Style</string>
+    <string name="theme_customization_ui_style_summary">Set a custom style for the user interface</string>
 
     <!-- Category for theme overlays -->
     <string name="theme_customization_category">Theming</string>
@@ -87,4 +87,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="theme_customization_device_default">Device default</string>
     <string name="theme_customization_navbar_title">Navbar style</string>
     <string name="theme_customization_navbar_summary">Set custom 3-button navbar style</string>
+
+    <!-- Black theme -->
+    <string name="system_black_theme_title">Use black theme</string>
+    <string name="system_black_theme_summary">Force black background colors</string>
 </resources>
