--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -67,9 +67,9 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Running services - Background processes tab -->
     <string name="background_processes_settings_title">Hintergrundprozesse</string>
 
-    <!-- Black theme -->
-    <string name="system_black_theme_title">Schwarzes Hintergrund-Design</string>
-    <string name="system_black_theme_summary">Schwarzen Hintergrund erzwingen</string>
+    <!-- UI Styles -->
+    <string name="theme_customization_ui_style_title">UI-Stil</string>
+    <string name="theme_customization_ui_style_summary">Einen benutzerdefinierten UI-Stil wählen</string>
 
     <!-- Category for theme overlays -->
     <string name="theme_customization_category">UI-Stil anpassen</string>
@@ -87,4 +87,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="theme_customization_device_default">Gemäß Standard fürs Gerät</string>
     <string name="theme_customization_navbar_title">Navigationsleiste</string>
     <string name="theme_customization_navbar_summary">Stil für die 3-Tasten-Navigationsleiste festlegen</string>
+
+    <!-- Black theme -->
+    <string name="system_black_theme_title">Schwarzes Hintergrund-Design</string>
+    <string name="system_black_theme_summary">Schwarzen Hintergrund erzwingen</string>
 </resources>
