Theming: Add some native monet settings Goal is to let users control monet engine more granularly Generally all we can set solely by changing Settings.Secure.THEME_CUSTOMIZATION_OVERLAY_PACKAGES Adds the ability to choose the accent color source, a custom accent color and the theme style Theme styles are generally available with a preview on ThemePicker but not with custom sources nor color
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/xml/theme_customization_settings.xml
+++ b/res/xml/theme_customization_settings.xml
@@ -25,6 +25,12 @@
         android:defaultValue="false" />
 
     <Preference
+        android:key="monet_settings"
+        android:title="@string/monet_settings_title"
+        android:summary="@string/monet_settings_summary"
+        android:fragment="com.pixeldust.settings.themes.MonetSettings" />
+
+    <Preference
         android:key="android.theme.customization.style"
         android:title="@string/theme_customization_ui_style_title"
         android:summary="@string/theme_customization_ui_style_summary"
