--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -306,4 +306,24 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="qs_outline">Outline</string>
     <string name="qs_two_tone">Zweifarbiger Akzent</string>
     <string name="qs_shaded">Schattiert</string>
+
+    <!-- Monet settings -->
+    <string name="monet_settings_title">Erweiterte Monet-Einstellungen</string>
+    <string name="monet_settings_summary">UI-Anpassungen für die Monet-Engine</string>
+    <string name="theme_style_title">Monet-UI-Stil</string>
+    <string name="theme_style_tonal_spot">Tonal Spot (Standard)</string>
+    <string name="theme_style_vibrant">Vibrant</string>
+    <string name="theme_style_expressive">Expressive</string>
+    <string name="theme_style_spritz">Spritz</string>
+    <string name="theme_style_rainbow">Rainbow</string>
+    <string name="theme_style_fruit_salad">Fruit Salad</string>
+    <string name="theme_style_muted">Muted</string>
+    <string name="theme_style_content">Content</string>
+    <string name="color_source_title">Farbquelle</string>
+    <string name="color_source_both">Beides (Standard)</string>
+    <string name="color_source_home">Hintergrundbild des Startbildschirms</string>
+    <string name="color_source_lock">Hintergrundbild des Sperrbildschirms</string>
+    <string name="color_source_preset">Voreinstellung</string>
+    <string name="accent_color_title">Akzentfarbe</string>
+    <string name="accent_color_summary">Überschreiben der standardmäßigen Akzentfarbe</string>
 </resources>
