--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -96,6 +96,20 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="volume_button_music_control_title">Playback control</string>
     <string name="volume_button_music_control_summary">When the screen is off, long-pressing volume keys will skip music tracks</string>
 
+    <!-- Network traffic -->
+    <string name="network_traffic_intro_text">
+        Shows current network traffic speed in the status bar.
+        The monitor shows the speed dynamically such that it alternates between
+        upload and download speed each second.
+    </string>
+    <string name="network_traffic_category_title">Network monitor</string>
+    <string name="network_traffic_title">Network traffic indicator</string>
+    <string name="network_traffic_summary">Enable or disable network speed indicator in status bar</string>
+    <string name="network_traffic_main_switch_title">Use Network traffic indicator</string>
+    <string name="network_options_title">Options</string>
+    <string name="network_traffic_autohide_title">Hide network traffic indicator if inactive</string>
+    <string name="network_traffic_autohide_summary">Hide when network traffic indicator is below 1 KB/s</string>
+
     <!-- Ambient battery bar settings -->
     <string name="ambient_battery_settings_title">Battery bar</string>
     <string name="ambient_battery_settings_summary">Display a battery bar on the ambient display</string>
