--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -15,4 +15,15 @@
         android:summary="@string/icon_manager_summary">
         <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
     </Preference>
+
+    <PreferenceCategory
+        android:title="@string/network_traffic_title">
+
+        <Preference
+            android:key="network_traffic_settings"
+            android:title="@string/network_traffic_title"
+            android:summary="@string/network_traffic_summary"
+            android:fragment="com.pixeldust.settings.statusbar.NetworkTrafficSettings"/>
+
+    </PreferenceCategory>
 </PreferenceScreen>
