[SQUASH] Add refactored settings for VoLTE/VoWiFi icon styles [2/2] Includes from the following commits:
* Add option to select VoLTE icon: crdroidandroid/android_packages_apps_crDroidSettings@b913ca1.
* Add more VoWiFi icon styles: crdroidandroid/android_packages_apps_crDroidSettings@3f0891b.
* Override VoLTE icon with VoWiFi when available: crdroidandroid/android_packages_apps_crDroidSettings@ab4fdc2.
* Remove unwanted VoLTE/VoWiFi icons [2/2]
* Add Vivo X60 Pro VoLTE Icon [2/2]
* Add VoLTE icon from Motorola [2/2]

Co-authored-by: Gagan Malvi <malvi@aospa.co>
Co-authored-by: AshutoshSundresh <62063875+AshutoshSundresh@users.noreply.github.com>
Co-authored-by: Stallix <joey@evolution-x.org>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Change-Id: Ib67f23b7e0cdf67ad8ab869c87de4c6e18c61f7a

--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -87,6 +87,10 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="theme_customization_device_default">Device default</string>
     <string name="theme_customization_navbar_title">Navbar style</string>
     <string name="theme_customization_navbar_summary">Set custom 3-button navbar style</string>
+    <string name="volte_icon_title">VoLTE icon</string>
+    <string name="volte_icon_summary">Display VoLTE icon when available</string>
+    <string name="vowifi_icon_title">VoWiFi icon</string>
+    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
 
     <!-- Black theme -->
     <string name="system_black_theme_title">Use black theme</string>
