--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -87,6 +87,10 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="theme_customization_device_default">Gemäß Standard fürs Gerät</string>
     <string name="theme_customization_navbar_title">Navigationsleiste</string>
     <string name="theme_customization_navbar_summary">Stil für die 3-Tasten-Navigationsleiste festlegen</string>
+    <string name="volte_icon_title">VoLTE-Symbol</string>
+    <string name="volte_icon_summary">VoLTE-Symbol anzeigen falls verfügbar</string>
+    <string name="vowifi_icon_title">VoWiFi-Symbol</string>
+    <string name="vowifi_icon_summary">VoWiFi-Symbol anzeigen falls verfügbar</string>
 
     <!-- Black theme -->
     <string name="system_black_theme_title">Schwarzes Hintergrund-Design</string>
