Settings: QS Header Image [2/2]
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -434,4 +434,7 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Navbar Animation -->
     <string name="pixel_navbar_anim_title">Pixel-Animation</string>
     <string name="pixel_navbar_anim_summary">Pixel-Animation für den Home-Button aktivieren</string>
+
+    <!-- QS Header image -->
+    <string name="qs_header_image_title">Hintergrundgrafik auswählen</string>
 </resources>
