--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -440,4 +440,7 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- Navbar Animation -->
     <string name="pixel_navbar_anim_title">Pixel animation</string>
     <string name="pixel_navbar_anim_summary">Enable pixel style animation for the home button</string>
+
+    <!-- QS Header image -->
+    <string name="qs_header_image_title">QS Header image</string>
 </resources>
