--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -299,4 +299,11 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="visualizer_center_mirrored_summary">Den mittig gespiegelten Modus aktivieren</string>
     <string name="pulse_vertical_mirror_title">Vertikal gespiegelt</string>
     <string name="pulse_vertical_mirror_summary">Erzeugt einen weiteren Pulse, der vertikal gedreht ist</string>
+
+    <!-- Quick settings styles -->
+    <string name="default_string">Standard</string>
+    <string name="qs_styles_title">Layout für QS-Kacheln</string>
+    <string name="qs_outline">Outline</string>
+    <string name="qs_two_tone">Zweifarbiger Akzent</string>
+    <string name="qs_shaded">Schattiert</string>
 </resources>
