--- a/res/values/pixeldust_arrays.xml
+++ b/res/values/pixeldust_arrays.xml
@@ -145,4 +145,18 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <string-array name="qs_styles_entries" translatable="false">
+        <item>@string/default_string</item>
+        <item>@string/qs_outline</item>
+        <item>@string/qs_shaded</item>
+        <item>@string/qs_two_tone</item>
+    </string-array>
+
+    <string-array name="qs_styles_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
