--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -306,4 +306,11 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="visualizer_center_mirrored_summary">Set the visualizer in center mirrored mode</string>
     <string name="pulse_vertical_mirror_title">Vertical Mirror</string>
     <string name="pulse_vertical_mirror_summary">Create other pulse and flip vertically</string>
+
+    <!-- Quick settings styles -->
+    <string name="default_string">Default</string>
+    <string name="qs_styles_title">QS tile theme</string>
+    <string name="qs_outline">Outline</string>
+    <string name="qs_two_tone">Two-tone accent</string>
+    <string name="qs_shaded">Shaded</string>
 </resources>
