Settings: Add brightness slider styles [2/3]
Change-Id: Id6bae41a3aca86a2483fb57317a63f97dd61415a
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -342,4 +342,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="clock_category_title">Uhranzeige</string>
     <string name="statusbar_clock_chip_title">Hintergrundchip anzeigen</string>
     <string name="statusbar_clock_chip_summary">Akzentfarbigen Chip hinter der Uhr anzeigen</string>
+
+    <!-- Brightness slider styles -->
+    <string name="theme_customization_brightness_slider_title">Helligkeitsregler</string>
+    <string name="theme_customization_brightness_slider_summary">Stil für den Helligkeitsregler festlegen</string>
 </resources>
