--- a/res/xml/theme_customization_settings.xml
+++ b/res/xml/theme_customization_settings.xml
@@ -45,6 +45,12 @@
         android:defaultValue="0" />
 
     <Preference
+        android:key="android.theme.customization.brightness_slider"
+        android:title="@string/theme_customization_brightness_slider_title"
+        android:summary="@string/theme_customization_brightness_slider_summary"
+        android:fragment="com.pixeldust.settings.themes.BrightnessSlider"/>
+
+    <Preference
         android:key="android.theme.customization.font"
         android:title="@string/theme_customization_font_title"
         android:summary="@string/theme_customization_font_summary"
