--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,6 +21,12 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+    <!-- PixelDust logo -->
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="pd_logo"
+        android:layout="@layout/pixeldust_logo"
+        android:selectable="false"/>
+
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
