--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -31,8 +31,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="double_tap_power_for_torch_summary_disabled">Disabled by open camera gesture</string>
 
     <!-- General tweaks -->
-    <string name="general_settings_title">General tweaks</string>
-    <string name="general_settings_summary">Other common and useful customizations</string>
+    <string name="general_settings_title">General Pixeldust tweaks</string>
+    <string name="general_settings_summary">Needful things</string>
 
     <!-- Unlimited photos storage -->
     <string name="use_photos_spoof_title">Unlimited Google photos storage</string>
