--- a/res/drawable/ic_pixeldust.xml
+++ b/res/drawable/ic_pixeldust.xml
@@ -12,10 +12,10 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="M824.8,173.5c3.1,-2 3.5,-6.7 1,-10.5c-2.5,-3.8 -7,-5.2 -10.1,-3.1c-3.1,2 -3.5,6.7 -1,10.5c2.5,3.8 7,5.2 10.1,3.1Z"
-      android:fillColor="#202124"
+      android:fillColor="@android:color/transparent"
       android:fillType="nonZero"/>
   <path
       android:pathData="M755.4,170.4c2.5,-3.8 2.1,-8.4 -1,-10.5c-3.1,-2 -7.6,-0.6 -10.1,3.1c-2.5,3.8 -2.1,8.4 1,10.5c3.1,2 7.6,0.6 10.1,-3.1Z"
-      android:fillColor="#202124"
+      android:fillColor="@android:color/transparent"
       android:fillType="nonZero"/>
 </vector>
