--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -31,7 +31,7 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="double_tap_power_for_torch_summary_disabled">Deaktiviert durch Geste zum Öffnen der Kamera</string>
 
     <!-- General tweaks -->
-    <string name="general_settings_title">Allgemeine Pixeldust Tweaks</string>
+    <string name="general_settings_title">Pixeldust Tweaks</string>
     <string name="general_settings_summary">Nützliche Dinge</string>
 
     <!-- Unlimited photos storage -->
