settings: Add preferences for lockscreen album art customizations
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -103,4 +103,23 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="keyguard_show_battery_summary">Während des Ladevorgangs einen Akkustandbalken auf dem Ambient Display anzeigen</string>
     <string name="keyguard_show_battery_always_title">Akkustandbalken immer anzeigen</string>
     <string name="keyguard_show_battery_always_summary">Akkustandbalken immer auf dem Ambient Display anzeigen</string>
+
+    <!-- Lock screen media artwork -->
+    <string name="lockscreen_media_art_options_title">Medienbenachrichtigung</string>
+    <string name="lockscreen_album_media_art_toggle">Mediengrafik</string>
+    <string name="lockscreen_album_media_art_summary">Mediengrafiken anzeigen, wenn verfügbar</string>
+
+    <!-- Lock screen album art filter -->
+    <string name="lockscreen_albumart_filter_title">Filtereinstellungen</string>
+    <string name="lockscreen_albumart_filter_none">Kein Filter</string>
+    <string name="lockscreen_albumart_filter_grayscale">Graustufen</string>
+    <string name="lockscreen_albumart_filter_tint">Akzent getönt</string>
+    <string name="lockscreen_albumart_filter_blur">Unschärfe</string>
+    <string name="lockscreen_albumart_filter_grayblur">Graustufen und unscharf</string>
+
+    <string name="artwork_media_background_enable_blur_title">Unschärfe für Mediengrafiken</string>
+    <string name="artwork_media_background_blur_radius_title">Unschärfegrad für Mediengrafiken</string>
+    <string name="media_artwork_fade_percent_title">Verblassungsgrad für Mediengrafiken</string>
+    <string name="lockscreen_albumart_filter_blur_radius_title">Unschärfegrad von Mediengrafiken</string>
+    <string name="ls_media_artwork_fade_percent_title">Verblassungsgrad für Mediengrafiken auf dem Sperrbildschirm</string>
 </resources>
