--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -88,6 +88,42 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="lockscreen_media_art_options"
+        android:title="@string/lockscreen_media_art_options_title">
+
+        <com.pixeldust.support.preference.SystemSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/lockscreen_album_media_art_toggle"
+            android:summary="@string/lockscreen_album_media_art_summary"
+            android:defaultValue="false" />
+
+        <com.pixeldust.support.preference.SystemSettingListPreference
+            android:key="lockscreen_albumart_filter"
+            android:title="@string/lockscreen_albumart_filter_title"
+            android:entries="@array/lockscreen_albumart_filter_entries"
+            android:entryValues="@array/lockscreen_albumart_filter_values"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="0" />
+                
+        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+            android:key="ls_media_filter_blur_radius"
+            android:title="@string/lockscreen_albumart_filter_blur_radius_title"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="125"
+            android:max="125"
+            settings:min="2"/>
+
+        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+            android:key="ls_media_artwork_fade_percent"
+            android:title="@string/ls_media_artwork_fade_percent_title"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="30"
+            android:max="80"
+            settings:min="1" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="ambient_display_category_when_to_show"
         android:title="@string/ambient_display_category_triggers"
         settings:controller="com.android.settings.display.AmbientDisplayWhenToShowPreferenceController"
