SystemUI: Add QS tile layout settings [2/2] * Introduce categories while at it
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -437,4 +437,17 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
 
     <!-- QS Header image -->
     <string name="qs_header_image_title">Hintergrundgrafik auswählen</string>
+
+    <!-- QS tiles layout  -->
+    <string name="qs_layout_category_title">Kachelanordnung</string>
+    <string name="qs_tile_label_hide_title">Überschrift verbergen</string>
+    <string name="qs_tile_label_hide_summary">Nur Symbol in Kachel anzeigen</string>
+    <string name="qs_tile_layout_title">Vertikale Anordnung</string>
+    <string name="qs_tile_layout_summary">Beschriftung unter Symbol statt neben Symbol anzeigen</string>
+    <string name="qs_columns_portrait_title">Spalten (Hochformat)</string>
+    <string name="qs_columns_landscape_title">Spalten (Querformat)</string>
+
+    <!-- QS categories titles -->
+    <string name="qs_panel_category_title">Panel</string>
+    <string name="qs_tiles_category_title">Kachel-Layout</string>
 </resources>
