--- a/res/xml/quicksettings_settings.xml
+++ b/res/xml/quicksettings_settings.xml
@@ -9,31 +9,66 @@
         android:key="quicksettings_settings"
         android:title="@string/quicksettings_settings_title">
 
-    <com.pixeldust.support.preference.SystemSettingSeekBarPreference
-        android:key="qs_header_image"
-        android:title="@string/qs_header_image_title"
-        android:defaultValue="0"
-        settings:interval="1"
-        android:max="32"
-        android:min="0" />
+    <PreferenceCategory
+        android:title="@string/qs_panel_category_title">
 
-    <com.pixeldust.support.preference.SystemSettingSeekBarPreference
-        android:key="qs_transparency"
-        android:title="@string/qs_transparency_title"
-        android:summary="@string/qs_transparency_summary"
-        android:defaultValue="100"
-        settings:interval="1"
-        settings:units="%"
-        android:max="100"
-        settings:min="1" />
+        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+            android:key="qs_header_image"
+            android:title="@string/qs_header_image_title"
+            android:defaultValue="0"
+            settings:interval="1"
+            android:max="32"
+            android:min="0" />
 
-    <com.pixeldust.support.preference.SystemSettingListPreference
-        android:key="qs_quick_pulldown"
-        android:title="@string/status_bar_quick_qs_pulldown"
-        android:summary="%s"
-        android:dialogTitle="@string/status_bar_quick_qs_pulldown"
-        android:entries="@array/quick_pulldown_entries"
-        android:entryValues="@array/quick_pulldown_values"
-        android:defaultValue="0" />
+        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+            android:key="qs_transparency"
+            android:title="@string/qs_transparency_title"
+            android:summary="@string/qs_transparency_summary"
+            android:defaultValue="100"
+            settings:interval="1"
+            settings:units="%"
+            android:max="100"
+            settings:min="1" />
 
+        <com.pixeldust.support.preference.SystemSettingListPreference
+            android:key="qs_quick_pulldown"
+            android:title="@string/status_bar_quick_qs_pulldown"
+            android:summary="%s"
+            android:dialogTitle="@string/status_bar_quick_qs_pulldown"
+            android:entries="@array/quick_pulldown_entries"
+            android:entryValues="@array/quick_pulldown_values"
+            android:defaultValue="0" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/qs_tiles_category_title">
+        
+         <com.pixeldust.support.preference.SystemSettingSwitchPreference
+            android:key="qs_tile_label_hide"
+            android:title="@string/qs_tile_label_hide_title"
+            android:summary="@string/qs_tile_label_hide_summary"
+            android:defaultValue="false" />
+
+         <com.pixeldust.support.preference.SystemSettingSwitchPreference
+            android:key="qs_tile_vertical_layout"
+            android:title="@string/qs_tile_layout_title"
+            android:summary="@string/qs_tile_layout_summary"
+            android:defaultValue="false" />
+
+         <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+            android:key="qs_layout_columns"
+            android:title="@string/qs_columns_portrait_title"
+            android:max="5"
+            settings:min="2"
+            settings:interval="1"
+            android:defaultValue="2" />
+
+         <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+            android:key="qs_layout_columns_landscape"
+            android:title="@string/qs_columns_landscape_title"
+            android:max="6"
+            settings:min="2"
+            settings:interval="1"
+            android:defaultValue="4" />
+    </PreferenceCategory>
 </PreferenceScreen>
