Settings: Add QS pull down anywhere [2/2]
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -332,4 +332,5 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="quick_pulldown_none">Deaktiviert</string>
     <string name="quick_pulldown_right">Statusleiste von rechts nach unten ziehen</string>
     <string name="quick_pulldown_left">Statusleiste von links nach unten ziehen</string>
+    <string name="quick_pulldown_always">Statusleiste nach unten ziehen</string>
 </resources>
