--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -339,4 +339,5 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="quick_pulldown_none">Disabled</string>
     <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
     <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
+    <string name="quick_pulldown_always">Pulldown statusbar anywhere</string>
 </resources>
