--- a/res/xml/theme_customization_settings.xml
+++ b/res/xml/theme_customization_settings.xml
@@ -37,6 +37,12 @@
         android:fragment="com.pixeldust.settings.themes.UIStylesPicker"/>
 
     <Preference
+        android:key="android.theme.customization.qs_panel"
+        android:title="@string/theme_customization_quicksettings_tiles_title"
+        android:summary="@string/theme_customization_quicksettings_tiles_summary"
+        android:fragment="com.pixeldust.settings.themes.QuickSettingsTiles"/>
+
+    <Preference
         android:key="android.theme.customization.brightness_slider"
         android:title="@string/theme_customization_brightness_slider_title"
         android:summary="@string/theme_customization_brightness_slider_summary"
