--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -253,6 +253,7 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="screen_off_animation_title">Screen off animation</string>
     <string name="screen_off_animation_crt">CRT</string>
     <string name="screen_off_animation_scale">Scale</string>
+    <string name="default_string">Default</string>
 
     <!-- Pulse music visualizer -->
     <string name="pulse_help_policy_notice_title">About Pulse</string>
